# COVID_PROJECT_KR

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.streamlit.example/: secrets.toml.example
Ingestion/cdc/: create_table.py  ingest_hospitalization.py  ingest_vaccination_coverage.py  ingest_vaccination_trends.py
Ingestion/census/: ingest_census.py
covid_pipeline/: dbt_project.yml
covid_pipeline/macros/: generate_schema_name.sql
covid_pipeline/models/: sources.yml
covid_pipeline/models/marts/: mart_data_quality.sql  mart_state_demographics.sql  mart_vaccination_vs_hospitalization_early.sql  mart_vaccination_vs_hospitalization_recent.sql  schema.yml
covid_pipeline/models/staging/: schema.yml  stg_census_state_demographics.sql  stg_hospital_metrics.sql  stg_vaccination_coverage.sql  stg_vaccination_trends.sql
covid_pipeline/seeds/: fips_state_ref.csv
dags/: Ingest_vaccination_coverage_dag.py  census_dag.py  dbt_intermediate_dags.py  dbt_marts_dag.py  dbt_staging_dag.py  hospitalization_dag.py  ingest_census_dag.py  ingest_hospitalization_dag.py  ingest_vaccination_trends_dag.py  stg_census_dag.py  stg_hospitalization_dag.py  stg_vaccination_coverage.py  stg_vaccination_trends.py  vaccination_coverage_dag.py  vaccination_trends_dag.py
streamlit/: Introduction.py  connection.py
streamlit/pages/: 1_vaccinations_rollout.py  2_seasonal_boosters.py  3_vaccination_demographics.py  4_Data_Quality.py
